--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,11 @@
         android:theme="@style/Theme.Journey"
         tools:targetApi="31"
 
-        android:usesCleartextTraffic="true"
-        android:name=".MyApplication">
-        <activity android:name=".SignupPageActivity"></activity>
+        android:usesCleartextTraffic="true">
+
+        <activity android:name=".SignupPageActivity"/>
         <activity android:name=".MainActivity"
-            android:exported="false"></activity>
+            android:exported="false"/>
         <activity
             android:name=".LoginPageActivity"
             android:exported="true">
