--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,10 @@
         tools:targetApi="31"
 
         android:usesCleartextTraffic="true"
-        android:name=".MyApplication">
-        <activity android:name=".SignupPageActivity"></activity>
+        android:name=".Token"
+        >
+        <activity android:name=".FixprofileActivity"/>
+        <activity android:name=".SignupPageActivity"/>
         <activity android:name=".MainActivity"
             android:exported="false"></activity>
         <activity
