--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".Token"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -13,16 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Journey"
-        tools:targetApi="31"
-
         android:usesCleartextTraffic="true"
-        android:name=".Token"
-        >
-        <activity android:name=".FixprofileActivity"
-            android:parentActivityName=".MainActivity"/>
-        <activity android:name=".SignupPageActivity"/>
-        <activity android:name=".MainActivity"
-            android:exported="false"></activity>
+        tools:targetApi="31">
+        <activity
+            android:name=".CafeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FixprofileActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".SignupPageActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
         <activity
             android:name=".LoginPageActivity"
             android:exported="true">
@@ -32,6 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.naver.maps.map.NCP_KEY_ID"
             android:value="0bz9trkjdr" />
