--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:name=".Token"
+        android:name=".data.remote.Token"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -20,28 +20,28 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".ScheduleActivity"
+            android:name=".data.activity.schedule.ScheduleActivity"
             android:exported="false" />
         <activity
             android:name=".data.activity.cafe.CafewebviewActivity"
             android:exported="false" />
         <activity
-            android:name=".RouletteActivity"
+            android:name=".data.activity.Roulette.RouletteActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".data.activity.main.MainActivity" />
         <activity
             android:name=".data.activity.cafe.CafeActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".data.activity.main.MainActivity" />
         <activity
-            android:name=".FixprofileActivity"
-            android:parentActivityName=".MainActivity" />
-        <activity android:name=".SignupPageActivity" />
+            android:name=".data.activity.main.FixprofileActivity"
+            android:parentActivityName=".data.activity.main.MainActivity" />
+        <activity android:name=".data.activity.Login.SignupPageActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".data.activity.main.MainActivity"
             android:exported="false" />
         <activity
-            android:name=".LoginPageActivity"
+            android:name=".data.activity.Login.LoginPageActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
