--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
 
     <application
         android:name=".data.remote.Token"
@@ -18,25 +21,38 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Journey"
-
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
         <activity
-            android:name=".data.activity.rest.RestActivity"
+            android:name=".data.activity.share.ImageshareActivity"
+            android:exported="false"
             android:parentActivityName=".data.activity.main.MainActivity"
-            android:exported="false" />
+            />
+        <activity
+            android:name=".data.activity.rest.RestActivity"
+            android:exported="false"
+            android:parentActivityName=".data.activity.main.MainActivity" />
         <activity
             android:name=".data.activity.schedule.ScheduleActivity"
-            android:parentActivityName=".data.activity.main.MainActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".data.activity.main.MainActivity" />
         <activity
             android:name=".data.activity.cafe.CafewebviewActivity"
             android:exported="false" />
         <activity
             android:name=".data.activity.calc.DivisionCalculate"
             android:exported="false"
-            android:parentActivityName=".data.activity.main.MainActivity"/>
+            android:parentActivityName=".data.activity.main.MainActivity" />
         <activity
             android:name=".data.activity.Roulette.RouletteActivity"
             android:exported="false"
@@ -51,9 +67,9 @@
         <activity android:name=".data.activity.Login.SignupPageActivity" />
         <activity
             android:name=".data.activity.main.MainActivity"
+            android:configChanges="orientation|screenSize"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|screenSize"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".data.activity.Login.LoginPageActivity"
             android:exported="true">
