0526 - 계산기 및 버그 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
             android:exported="false"
             android:parentActivityName=".data.activity.main.MainActivity"
             />
+        <activity android:name=".data.activity.rest.RestwebviewActivity"
+            android:exported="false"/>
         <activity
             android:name=".data.activity.rest.RestActivity"
             android:exported="false"
