--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,6 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
-
     <application
         android:name=".data.remote.Token"
         android:allowBackup="true"
@@ -23,6 +21,11 @@
         android:theme="@style/Theme.Journey"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".data.activity.activ.ActivActivity"
+            android:exported="false"
+            android:parentActivityName=".data.activity.main.MainActivity"/>
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
@@ -36,10 +39,10 @@
         <activity
             android:name=".data.activity.share.ImageshareActivity"
             android:exported="false"
-            android:parentActivityName=".data.activity.main.MainActivity"
-            />
-        <activity android:name=".data.activity.rest.RestwebviewActivity"
-            android:exported="false"/>
+            android:parentActivityName=".data.activity.main.MainActivity" />
+        <activity
+            android:name=".data.activity.rest.RestwebviewActivity"
+            android:exported="false" />
         <activity
             android:name=".data.activity.rest.RestActivity"
             android:exported="false"
