--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/airplane"
+        android:icon="@mipmap/travel"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/airplane_round"
+        android:roundIcon="@mipmap/travel_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Journey"
         android:usesCleartextTraffic="true"
